# language-tutor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_ui.sh
src/language_tutor/: __init__.py  analytics.py  app.py  audio.py  config.py  content.py  db.py  llm.py  main.py  planner.py  session.py  srs.py  stt.py  tts.py
src/language_tutor/activities/: __init__.py  article_summary.py  base.py  error_correction.py  free_conversation.py  vocabulary_drill.py  writing_prompt.py
tests/: conftest.py  test_db.py  test_srs.py  validate_qwen3.py
