[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "language-tutor"
version = "0.1.0"
description = "A personal language tutor combining LLM conversation with spaced repetition (SRS)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4",           # Ollama Python client for local LLM (Qwen3-8B)
    "rich>=13.0",            # Rich terminal output (colors, tables, progress bars)
    "python-dotenv>=1.0",    # Load .env files for configuration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.5",
]
voice = [
    "vosk>=0.3",             # STT — local speech recognition (NOT whisper)
    "edge-tts>=6.1",         # TTS — Microsoft neural voices (free)
    "sounddevice>=0.4",      # Audio recording from microphone
    "soundfile>=0.12",       # Audio file I/O
]

[project.scripts]
tutor = "language_tutor.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/language_tutor"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
